syntax = "proto3";

option go_package = "github.com/dislinkt/connection_service/proto";

package connection_service_proto;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";


service ConnectionService{


  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/connection/register"
      body:"user"
    };
  }

  rpc CreateConnection(NewConnectionRequest) returns (NewConnectionResponse) {
    option (google.api.http) = {
      post: "/connection"
      body:"connection"
    };
  }

}

message RegisterRequest{
  User user = 1;
}

message RegisterResponse{
  User user = 1;
  string message =2 ;
}

message  NewConnectionResponse {
    string  BaseUserUUID = 1;
    string  ConnectUserUUID = 2;
    string  ConnectionResponse = 3;
}

message Connection {
  string  BaseUserUUID = 1;
  string  ConnectUserUUID = 2;
}

message  NewConnectionRequest {
  Connection connection = 1;
}

message User {
  string userID = 1;
  string status = 2;
}

